--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ smallrye.jwt.sign.key.location=privateKey.pem
 mp.jwt.verify.publickey.location=publicKey.pem
 quarkus.native.resources.includes=publicKey.pem
 mp.jwt.verify.issuer=http://localhost:8080
+quarkus.http.cors=true
